bug spacing footer

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,9 @@
   color: transparent !important;
   background: transparent !important;
 
+  font-size: 0px;
+  width: 0px;
+  height: 0px;
   opacity: 0;
 }
 
